# it_department

./: .env.example  pyproject.toml  readme.md
core/core/: settings.py
django/: db.sqlite3
django/apps/company/: models.py  serializers.py  urls.py  views.py
django/apps/company/migrations/: 0001_initial.py  0002_alter_employee_photo.py
django/core/: settings.py  urls.py
